Fix front page following overflow
Due to 234e608e

--- a/app/assets/stylesheets/shared_elements.scss
+++ b/app/assets/stylesheets/shared_elements.scss
@@ -209,7 +209,7 @@ ul.thread-list {
       float: left;
       color: $grey2;
       .following {
-        width: 50%;
+        width: 43%;
         display: inline-block;
         vertical-align: top;
         font-size: 11px;
